# solnaixlota

./: .dockerrc  .env  .env.example  .eslintrc.json  .gitignore  .npmrc  .sh  Cargo.toml  Dockerfile  Dynatrace-ActiveGate-Linux-x86-1.303.18.sh  Dynatrace-OneAgent-Linux-1.303.42.20241104-145223.sh  LICENSE  Makefile  README.md  ai_platform_setup.sh  automated_deploy.sh  build.sbt  deno.json  deploy.sh  docker-compose.yml  dt-root.cert.pem.1  npm-init-eslint-config  npm-update-deprecated-packages  npm-update-eslint  package-lock.json  package.json  pytest.ini  static_analysis.sh
.devcontainer/: devcontainer.json
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: agiops_pipeline.yml  aiops_pipeline.yml  auto-deploy.yml  ci.yml  ci_cd.yml  ci_cd_pipeline.yml  codeql-analysis.yml  dependabot.yml  main.yml  unified_pipeline.yml
.metals/: metals.lock.db  metals.mv.db
alertmanager/: alertmanager.yml
config/: ai_platform_setup.conf  versions.conf
docker/: Dockerfile.dependencies
frontend/: webpack.config.js
infra/: backend.tf  data_sources.tf  main.tf  outputs.tf  providers.tf  variables.tf
kubernetes/: deployment.yml
logstash/: logstash.conf
modules/: ci_cd_pipeline.sh  dependency_management.sh  deploy_monitoring.sh  error_handling.sh  health_checks.sh  logging.sh  port_configuration.sh  status_analytics.sh
prometheus/: prometheus.yml
scripts/: deploy.sh  deploy_ai_consulting.sh  deploy_automl.sh  deploy_content_creation_ai.sh  deploy_cpp_anomaly_detector.sh  deploy_healthcare_ai.sh  deploy_kubernetes.sh  deploy_personalization.sh  deploy_predictive_analytics.sh  deploy_rust_anomaly_detector.sh  deploy_supply_chain_ai.sh  deploy_vr_ar_ai.sh  functions.sh  gen.sh  install_all_dependencies.sh  install_dependencies.sh  rollback.sh  setup_env.sh
scripts/config/: env.sh  (+1 more)
scripts/src/cpp_module/: CMakeLists.txt
scripts/src/cpp_module/include/: cpp_anomaly_detector.h
scripts/src/cpp_module/src/: cpp_anomaly_detector.cpp
scripts/src/cpp_module/tests/: CMakeLists.txt  test_cpp_anomaly_detector.cpp
src/: error.rs  lib.rs  main.ts
src/cpp_module/: CMakeLists.txt
src/cpp_module/include/: cpp_anomaly_detector.h
src/cpp_module/src/: cpp_anomaly_detector.cpp
src/cpp_module/tests/: catch.hpp  test_cpp_anomaly_detector.cpp
workflows/: ci.yml
(+154 files in other folders)
