[package]
name = "ai_platform"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Web framework
actix-web = "4.3"
actix-rt = "2.8"

# Database
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "postgres"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Configuration
config = "0.14"
dotenv = "0.15"

# Authentication
jsonwebtoken = "8.3"
bcrypt = "0.15"

[lib]
name = "ai_platform"
path = "src/lib.rs"
